cluster/flux-setup.yaml
---
# webhook receiver
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deploy.xetera.dev`)
      priority: 10
      services:
        - name: webhook-receiver
          port: 80
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    options:
      name: ingress-cloudflare-mtls@kubernetescrd
    secretName: cloudflare-origin-xetera-dev
